--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-	font-size: 35px;
+	font-size: 33px;
 	font-weight: 500;
 	color: #434343;
 	margin: 0;
@@ -78,15 +78,15 @@ h2 {
 	font-family: 'Montserrat';
 	font-size: 22px;
 	font-weight: 400;
+	margin-top: 10vh;
 	width: 65%;
 
 }
 
 .kpnimage {
-	height: 450px;
+	height: 50vh;
 	margin-left: 130px;
 	margin-top: 15vh;
-
 }
 
 @media only screen and (max-width: 600px) {
@@ -136,13 +136,14 @@ h2 {
 	font-size: 22px;
 	font-weight: 400;
 	width: 65%;
+	margin-top: 10vh;
 }
 
 .ootimage {
-	height: 275px;
-	margin-left: 80px;
+	height: 35vh;
+	margin-left: 0px;
 	position: absolute;
-	bottom: 50px;
+	margin-top: 30vh;
 	z-index: 3;
 }
 
@@ -198,13 +199,14 @@ h2 {
 	font-size: 22px;
 	font-weight: 400;
 	width: 65%;
+	margin-top: 10vh;
 }
 
 .hanzeimage {
-	height: 375px;
-	margin-left: 120px;
+	height: 50vh;
+	margin-left: 0px;
 	position: absolute;
-	bottom: 10px;
+	margin-top: 20vh;
 	z-index: 3;
 }
 
@@ -256,13 +258,14 @@ h2 {
 	font-size: 22px;
 	font-weight: 400;
 	width: 65%;
+	margin-top: 10vh;
 }
 
 .bedrijfimage {
-	height: 275px;
+	height: 35vh;
 	margin-left: -170px;
 	position: absolute;
-	bottom: 50px;
+	margin-top: 30vh;
 	z-index: 3;
 }
 
@@ -312,12 +315,13 @@ h2 {
 	font-size: 22px;
 	font-weight: 400;
 	width: 65%;
+	margin-top: 10vh;
 }
 
 .fabriekimage {
 	width: 475px;
 	margin-left: 50px;
-	bottom: 40px;
+	margin-top: 35vh;
 	position: absolute;
 }
 
@@ -379,13 +383,14 @@ h2 {
 	font-size: 22px;
 	font-weight: 400;
 	width: 65%;
+	margin-top: 10vh;
 }
 
 .solarimage {
-	height: 200px;
+	height: 30vh;
 	margin-left: 0px;
 	position: absolute;
-	bottom: 50px;
+	margin-top: 30vh;
 	z-index: 3;
 }
 
